infrastructure/overlays/prod-cluster/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: external-gateway
      namespace: nginx-gateway
      sectionName: https # Ссылаемся на HTTPS-секцию шлюза
  hostnames:
    - "argocd.jenkinsdevops.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
